# ChangeLog for app-office/planner
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/planner/ChangeLog,v 1.45 2008/12/04 15:35:15 eva Exp $

*planner-0.14.3-r2 (04 Dec 2008)
*planner-0.14.3-r1 (04 Dec 2008)

  04 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/planner-0.14.3-build-failure.patch,
  +files/planner-0.14.3-configure.patch, +planner-0.14.3-r1.ebuild,
  +planner-0.14.3-r2.ebuild:
  Allow planner to select specific libgda and fix build with newer glib/gcc,
  bug #231823

  25 May 2008; Markus Meier <maekke@gentoo.org> planner-0.14.3.ebuild:
  amd64/x86 stable, bug #223297

  24 May 2008; nixnut <nixnut@gentoo.org> planner-0.14.3.ebuild:
  Stable on ppc wrt bug 223297

  23 May 2008; Tobias Klausmann <klausman@gentoo.org> planner-0.14.3.ebuild:
  Stable on alpha, bug #223297

  23 May 2008; Ferris McCormick <fmccor@gentoo.org> planner-0.14.3.ebuild:
  Sparc stable, Bug #223297.  Nice application.

  26 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> planner-0.14.3.ebuild:
  add gtk-doc-am because of eautomake, bug #219337

*planner-0.14.3 (20 Apr 2008)

  20 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/planner-0.14.3-eds-plugin.patch,
  +files/planner-0.14.3-parallel-build.patch, +planner-0.14.3.ebuild:
  bump to 0.14.3. Bug fixes, support for libgda-3, a few new features and
  updated translations. Patch to fix parallel build issue and compilation
  fix for eds plugin.

  10 Jan 2008; Mart Raudsepp <leio@gentoo.org> -planner-0.12.1.ebuild,
  -planner-0.13.ebuild, -planner-0.14.ebuild:
  Remove old versions as some do not compile anymore, bug 204367

  10 Jan 2008; Daniel Gryniewicz <dang@gentoo.org> planner-0.14.2.ebuild:
  Marked stable on amd64 for bug #204466

  08 Jan 2008; Raúl Porcel <armin76@gentoo.org> planner-0.14.2.ebuild:
  alpha stable wrt #204466

  05 Nov 2007; Gilles Dartiguelongue <eva@gentoo.org> planner-0.14.2.ebuild: