@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/planner/Attic/planner-0.14.3-r1.ebuild,v 1.1 2008/12/04 15:35:15 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/planner/Attic/planner-0.14.3-r1.ebuild,v 1.2 2009/01/08 16:17:04 armin76 Exp $
 
 EAPI="1"
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://live.gnome.org/Planner/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~alpha ~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="alpha ~amd64 ~ppc sparc ~x86"
 IUSE="doc eds libgda python examples"
 
 RDEPEND=">=dev-libs/glib-2.6
